# led-ticker

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  Dockerfile.try  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  async_news_feed.py  async_price_apis.py  async_ticker.py  async_widgets.py  compose.try.yaml  compose.yaml  config.example.toml  config.toml  docker-compose.ci.yml  docker-compose.yml  frame.py  main.py  price_apis.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  settings.env  setup.py  ticker.py
.claude/commands/: review-docs.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: submit-sign.yml
.github/workflows/: ci.yml  docs-deploy.yml  docs-pr-preview.yml  docs.yml  publish.yml
.superpowers/sdd/: progress.md  task-10-report.md  task-4-report.md  task-5-report.md
AsyncTicker.egg-info/: SOURCES.txt
config/: config.alternating.toml  config.bands_border_test.example.toml  config.baseball.toml  config.bg_color_test.example.toml  config.bigsign.example.toml  config.bigsign.firebird.example.toml  config.bigsign.moonbunny.example.toml  config.busy_longboi.toml  config.busy_smallsign.toml  config.calendar_smoketest.toml  config.clock_smoketest.toml  config.colored-token.example.toml  config.example.toml  config.firebird.example.toml  config.forever_scroll.toml  config.gif_test.example.toml  config.gif_text.example.toml  config.halal-cart.example.toml  config.hires_emoji_test.example.toml  config.hires_fonts_test.example.toml  config.hires_transitions_test.example.toml  config.image_test.example.toml  config.infini_scroll.toml  config.inline_tokens_smoketest.bigsign.toml  config.lightbulb_border_test.example.toml  config.longboi.toml  config.mlb.toml  config.mlb_attendance_test.toml  config.mlb_bigsign_test.toml  config.mlb_forever.toml  config.mlb_infini.toml  config.mlb_promotions_test.toml  config.mlb_scoreboard_test.toml  config.mlb_standings.toml  config.mlb_statcast_test.toml  config.mlb_two_row_test.toml  config.moonbunny.example.toml  config.moonbunny.production.toml  config.nyancat.toml  config.one_at_a_time.toml  (+25 more)
config/assets/: ATTRIBUTION.md
config/local/: .gitkeep
deploy/: busy-light-camera-watcher.lua  install.sh  led-ticker-webui.service  led-ticker.service
docs/: DOCS-STYLE.md  RELEASING.md  plugin-system.md  visual-validation.md
docs/content-source/: README.md  asset-handling-legacy.md  decision-rules-legacy.md  emoji.md  transitions-legacy.md  widgets-legacy.md
docs/profiles/: README.md
docs/site/: .gitignore  .npmrc  .prettierignore  .prettierrc  README.md  astro.config.mjs  cloudflare-build.sh  package-lock.json  package.json  pnpm-lock.yaml
examples/plugins/: README.md
scripts/: check-no-foreign-lockfiles.sh  check_release_version.py  compute-version.sh  crypto-ticker.py  cut_release.py  panel_color_test.py  panel_map.py  release_guard.py  setup.sh
src/AsyncTicker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/async_ticker/: async_news_feed.py  async_price_apis.py  async_ticker.py  async_widgets.py  colors.py  frame.py  helpers.py  main.py  widgets.py
src/led_ticker/: __init__.py  _build.py  (+46 more)
tests/: conftest.py  test_animations.py  test_animations_rotation.py  test_app.py  test_app_cli_module.py  test_app_coercion_module.py  test_app_factories_module.py  test_app_random_color.py  test_app_run_load_order.py  test_app_run_module.py  test_app_runtime_warnings.py  test_app_submodule_imports.py  test_async_ticker.py  test_backend_override.py  test_baseball.py  test_bdf_parser.py  test_border_surface_drift.py  test_borders.py  test_build_ref.py  test_build_stamp_plumbing.py  test_busy_http.py  test_busy_light.py  test_check_release_version.py  test_coerce.py  test_coercion_plugin_hint.py  test_color_providers.py  test_colors.py  test_committed_configs_only_reference_bundled_assets.py  test_compat.py  test_compute_version.py  test_config.py  test_config_schedule.py  test_config_visibility_schedule.py  test_constants.py  test_container_refresh.py  test_count_validation.py  test_demo_config_keys.py  test_dispatch_drift.py  test_dockerfile_version_guard.py  test_docs_available_covers_catalog.py  (+115 more)
tools/: bench_setpixel.py  derive_heart_tunnel.py  derive_phoenix_assets.py  derive_pride_assets.py  gen_curated_noto_hires.py  gen_emoji_manifest.py  gen_emoji_pack.py  gen_fire_hires.py  render_emoji_previews.py
(+825 files in other folders)
