[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "led-ticker"
version = "2.0.0"
description = "Asyncio LED matrix display for news, weather, crypto, and more"
requires-python = ">=3.9"
authors = [
    { name = "James Awesome", email = "james@morelli.nyc" },
]
dependencies = [
    "Pillow>=10.0",
    "aiohttp>=3.9",
    "attrs>=23.0",
    "feedparser>=6.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[project.scripts]
led-ticker = "led_ticker.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/led_ticker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
