[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "led-ticker"
version = "2.0.0"
description = "Asyncio LED matrix display for news, weather, crypto, and more"
requires-python = ">=3.14"
authors = [
    { name = "James Awesome", email = "james@morelli.nyc" },
]
dependencies = [
    "Pillow>=10.0",
    "aiohttp>=3.9",
    "attrs>=23.0",
    "feedparser>=6.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
render = [
    "imageio>=2.31",
    "tomli-w>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "pre-commit>=4.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[project.scripts]
led-ticker = "led_ticker.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/led_ticker"]

[tool.pytest.ini_options]
testpaths = ["tests", "tools/render_demo", "tools/gif_plan"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (spawns a subprocess; requires uv in PATH)",
]

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.14"
extraPaths = ["tests/stubs"]

[tool.ruff]
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.report]
fail_under = 90
